change version to field

--- a/donatecase-bukkit/src/main/resources/plugin.yml
+++ b/donatecase-bukkit/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: DonateCase
 main: net.ritasister.dc.DonateCase
 author: RitaSister
-version: 0.2.1
+version: ${internalVersion}
 depend: [Vault]
 api-version: 1.13
 commands:
